💄 fix content layout issue

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -6,6 +6,7 @@ html,
 body {
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 
 #initial-loading {
